// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/Title should renders correctly with descriptionFont 1`] = `
<View
  style={
    {
      "marginBottom": 24,
      "marginTop": 36,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#444B5A",
          "fontFamily": "Inter-Medium",
          "fontSize": 48,
          "lineHeight": 60,
        },
        [
          {
            "paddingTop": 24,
            "textAlign": "center",
          },
          {
            "backgroundColor": "#000",
          },
        ],
      ]
    }
  >
    description text two
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Title should renders correctly with titleFont 1`] = `
<View
  style={
    {
      "marginBottom": 24,
      "marginTop": 36,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#444B5A",
          "fontFamily": "Inter-Medium",
          "fontSize": 48,
          "lineHeight": 60,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "backgroundColor": "#000",
          },
        ],
      ]
    }
  >
    title two
  </Text>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 42,
          "lineHeight": 54,
        },
        [
          {
            "paddingTop": 24,
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    descriptionText
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Title should renders correctly without descriptionFont 1`] = `
<View
  style={
    {
      "marginBottom": 24,
      "marginTop": 36,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#20242D",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 54,
          "lineHeight": 66,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    title
  </Text>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 42,
          "lineHeight": 54,
        },
        [
          {
            "paddingTop": 24,
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    descriptionText
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Title should renders correctly without titleFont 1`] = `
<View
  style={
    {
      "marginBottom": 24,
      "marginTop": 36,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#20242D",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 54,
          "lineHeight": 66,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    title
  </Text>
</View>
`;
